update Post crud API
