# .c9/metadata/environment/entities/company.py
@@ -1,1 +1,1 @@
-{"filter":false,"title":"company.py","tooltip":"/entities/company.py","undoManager":{"mark":-1,"position":-1,"stack":[]},"ace":{"folds":[],"scrolltop":0,"scrollleft":0,"selection":{"start":{"row":18,"column":35},"end":{"row":18,"column":35},"isBackwards":false},"options":{"guessTabSize":true,"useWrapMode":false,"wrapToView":true},"firstLineState":0},"timestamp":1581058993554,"hash":"f1522f3e2b1469428b735907409ea0424a51f33a"}
+{"filter":false,"title":"company.py","tooltip":"/entities/company.py","undoManager":{"mark":0,"position":0,"stack":[[{"start":{"row":41,"column":4},"end":{"row":47,"column":72},"action":"remove","lines":["def _set_common(self):","        item = self._item","        if item.get(\"created_at\") and item.get(\"updated_at\"):","            self.created_at = item[\"created_at\"]","            self.updated_at = item[\"updated_at\"]","        else:","            self.created_at = self.updated_at = super()._date_time_now()"],"id":2},{"start":{"row":41,"column":4},"end":{"row":48,"column":72},"action":"insert","lines":["def _set_common(self):","        item = self._item","        if item.get(\"created_at\"):","            self.created_at = item[\"created_at\"]","            self.updated_at = super()._date_time_now()","","        else:","            self.created_at = self.updated_at = super()._date_time_now()"]}]]},"ace":{"folds":[],"scrolltop":360,"scrollleft":0,"selection":{"start":{"row":41,"column":4},"end":{"row":48,"column":72},"isBackwards":false},"options":{"guessTabSize":true,"useWrapMode":false,"wrapToView":true},"firstLineState":{"row":24,"state":"start","mode":"ace/mode/python"}},"timestamp":1581178969217,"hash":"d7f18a301d32c1680274a364ba7ba9328e2a8302"}
